corrected footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -768,7 +768,7 @@ nav ul a:hover:before, nav ul a:hover:after {
   }
   .bee_dev {
     height: 80px;
-    margin-bottom: 12px;
+    margin-bottom: 16px;
 
       p, a {
           margin: 0;
